/*
Copyright 2019 The Vitess Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

// Table ACL proto definitions.

syntax = "proto3";
option go_package = "vitess.io/vitess/go/vt/proto/tableacl";

package tableacl;

// TableGroupSpec defines ACLs for a group of tables.
message TableGroupSpec {
  string name = 1;
  // either tables or a table name prefixes (if it ends in a %)
  repeated string table_names_or_prefixes = 2;
  repeated string readers = 3;
  repeated string writers = 4;
  repeated string admins = 5;
}

message Config {
  repeated TableGroupSpec table_groups = 1;
}
